// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: Button should default to standard variant 1`] = `
<DocumentFragment>
  <button
    class="bElwSB"
  >
    Click me!
  </button>
</DocumentFragment>
`;

exports[`component: Button should render call to action variant 1`] = `
<DocumentFragment>
  <button
    class="hdDwhV"
  >
    Click me!
  </button>
</DocumentFragment>
`;

exports[`component: Button should render disabled variant 1`] = `
<DocumentFragment>
  <button
    class="bElwSB"
    disabled=""
  >
    Click me!
  </button>
</DocumentFragment>
`;

exports[`component: Button should render standard variant 1`] = `
<DocumentFragment>
  <button
    class="bElwSB"
  >
    Click me!
  </button>
</DocumentFragment>
`;
